# kb-creator

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  TODOS.md  pyproject.toml
_ref/: x-yanhua1010-2039966047378583815.md
references/: converter-guide.md  frontmatter-schema.md  obsidian-bases.md  obsidian-markdown.md  quality-checks.md  splitting-patterns.md  vault-architecture.md
src/kb_creator/: __init__.py  build.py  cli.py  contracts.py  converter.py  health.py  kb.py  linker.py  lint.py  permits.py  query.py  registry.py  scanner.py  source_patch.py  source_qa.py  splitter.py  state.py  summarizer.py  wiki_ops.py
templates/: base-view.template.yaml  frontmatter.template.yaml  moc.template.md  progress.template.md  topic-aliases.template.yml  topic-moc.template.md
tests/: test_contracts.py  test_converter.py  test_kb_cli.py  test_kb_operations.py  test_product_positioning.py  test_scanner.py  test_source_patch.py  test_source_qa.py  test_splitter.py  test_state.py  test_summarizer.py  test_two_tier_build.py
